# ansible-roles

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.legacy  README.md  REUSE.toml  TRADEMARKS.md  ansible.cfg  pyproject.toml  requirements.txt  requirements.yml
assets/logo/: LICENSE
collections/: requirements.yml
inventory/: apache.yml  localhost.yml  nginx.yml  roles.yml
inventory/group_vars/: all.yml
inventory/group_vars/all/: 00-ansible-config.yml  01-old-meta.yml  01-old-molecule_playbooks.yml  01-old-readme.yml  01-role-defaults.yml  02-repositories.yml  03-ci-defaults.yml  10-role-defaults.yml  20-requirements-defaults.yml  30-readme-defaults.yml  40-molecule-defaults.yml  50-platform-defaults.yml  60-pre-commit.yml  ansible-roles.yml  config.yml  connection.yml  main.yml  meta.yml  meta_main.yml  meta_requirements.yml  molecule.yml  molecule_playbooks.yml  molecule_scenarios.yml  paths.yml  pre-commit-config.yml  precommit.yml  readme.yml  remove.yml  requirements.yml  role_meta.yml
inventory/host_vars/: acme.yml  acme_netcup.yml  apache.yml  baseline.yml  bind.yml  ca.yml  certificates.yml  chrony.yml  common.yml  dhcpd.yml  docker.yml  environment.yml  fail2ban.yml  firewalld.yml  git.yml  hashicorp.yml  hostname.yml  hosts.yml  httpd.yml  ipv6.yml  ipxe.yml  journald.yml  kickstart.yml  libvirtd.yml  logindefs.yml  mariadb.yml  named.yml  networkmanager.yml  nexus_oss.yml  nfs.yml  nginx.yml  openjdk.yml  openssh.yml  packer_provision.yml  podman.yml  postgresql.yml  qemu.yml  resolved.yml  samba-dc.yml  samba-member.yml  (+10 more)
inventory/host_vars/apache/: meta.yml
inventory/host_vars/certificates/: meta_main.yml  molecule.yml  readme.yml
inventory/host_vars/libvirtd/: meta_main.yml  readme.yml
inventory/host_vars/nginx/: meta.yml
inventory/host_vars/pgbr/: meta.yml
make/: git.mk  gitignore.mk  license.mk  me.mk  meta.mk  molecule.mk  pre-commit.mk  pyproject.mk  readme.mk  requirements.mk
playbooks/: all.yml  clone.yml  contributing.yml  directory.yml  github.yml  gitignore.yml  license.yml  meta.yml  meta_main.yml  meta_requirements.yml  molecule.yml  new-role.yml  new.yml  pre-commit-config.yml  pre-commit.yml  pyproject.yml  readme.yml  remove.yml  requirements-galaxy.yml  requirements-python.yml  requirements.yml  tox.yml
playbooks/localhost/: .pre-commit-config.yaml
playbooks/tasks/: github_clone.yml  github_fetch_repos.yml
playbooks/templates/: .gitignore.j2  .pre-commit-config.yaml.j2  CONTRIBUTING.md.j2  LICENSE.j2  README.md.j2  host_vars.yml.j2  pyproject.toml.j2  requirements.txt.j2  requirements.yml.j2
roles/meta/tasks/: main.yml
templates/: README.md.j2  main.yml.j2  requirements.yml.j2  tox.ini.j2
templates/meta/: requirements.yml.j2
(+19 files in other folders)
