[project]
name = "ansible-roles"
version = "0.1.0"
description = "Ansible roles database and development playbooks."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["ansible", "molecule", "roles"]
repository = "https://github.com/jomrr/ansible-roles"

[dependency-groups]
ansible = [
  "ansible==13.*",
  "ansible-lint==26.*",
  "jmespath==1.*",
]

tools = [
  "commitizen==4.*",
  "pre-commit==4.*",
  "python-semantic-release==10.*",
  "reuse==6.*",
]

podman = [
  "molecule==26.*",
  "molecule-plugins[podman]==25.*",
]

docker = [
  "molecule-plugins[docker]==25.*",
]

vagrant = [
  "molecule-plugins[vagrant]==25.*",
]

private = [
  "leg @ git+ssh://git@git.mauer.in/jomrr/leg.git@dev",
]

default = [
  { include-group = "ansible" },
  { include-group = "tools" },
  { include-group = "podman" },
  { include-group = "private" },
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = true
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
